# ProektPovtorUchebi

./: .flake8  config.py  pyproject.toml
src/: cikli_4_2_2.py  mnogestvo_kortegi_7_2.py  osnova_sinntaxisa.py  povtor.py  prodvin_func_7_1.py  pytest_10_2.py  spiski_3_1.py  stroki_5_1_1.py  stroki_5_2_2.py  tipi_dannix.py
tests/: test_pytest_10_2.py
