[project]
name = "proektpovtoruchebi"
version = "0.1.0"
description = ""
authors = [
    {name = "user",email = "d_k81@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.16.1"
isort = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.2.1"

